fix: Support both Capacitor and GitHub Pages builds - vite.config.js: Conditional base path based on mode - package.json: build:pages and build:ios scripts - deploy.yml: Use build:pages for GitHub Pages

--- a/tryg-app/package.json
+++ b/tryg-app/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:pages": "vite build --mode pages",
+    "build:ios": "vite build && npx cap sync ios",
     "lint": "eslint .",
     "preview": "vite preview"
   },
