--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,9 @@ jobs:
         working-directory: tryg-app
         run: npm ci
       
-      - name: Build
+      - name: Build for GitHub Pages
         working-directory: tryg-app
-        run: npm run build
+        run: npm run build:pages
       
       - name: Setup Pages
         uses: actions/configure-pages@v4
