--- a/tryg-app/package.json
+++ b/tryg-app/package.json
@@ -19,6 +19,7 @@
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
     "@capacitor/ios": "^8.0.0",
+    "@sentry/react": "^10.30.0",
     "firebase": "^12.6.0",
     "lucide-react": "^0.559.0",
     "react": "^19.2.0",
