--- a/tryg-app/package.json
+++ b/tryg-app/package.json
@@ -21,6 +21,7 @@
     "@capacitor/ios": "^8.0.0",
     "@sentry/react": "^10.30.0",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.559.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
