--- a/tryg-app/package.json
+++ b/tryg-app/package.json
@@ -44,6 +44,7 @@
     "lint-staged": "^16.2.7",
     "tailwindcss": "^4.1.17",
     "vite": "^7.2.4",
+    "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.15"
   },
   "lint-staged": {
