--- a/tryg-app/package.json
+++ b/tryg-app/package.json
@@ -24,9 +24,12 @@
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.559.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
