--- a/tryg-app/tsconfig.json
+++ b/tryg-app/tsconfig.json
@@ -28,6 +28,9 @@
     "include": [
         "src"
     ],
+    "exclude": [
+        "src/test/**/*"
+    ],
     "references": [
         {
             "path": "./tsconfig.node.json"
