--- a/tryg-app/package.json
+++ b/tryg-app/package.json
@@ -51,6 +51,7 @@
     "lint-staged": "^16.2.7",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.51.0",
     "vite": "^7.2.4",
     "vite-plugin-pwa": "^1.2.0",
     "vitest": "^4.0.15"
