--- a/tryg-app/package.json
+++ b/tryg-app/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "build:pages": "vite build --mode pages",
     "build:ios": "vite build && npx cap sync ios",
+    "build:android": "vite build && npx cap sync android",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest run",
@@ -16,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@capacitor/android": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
     "@capacitor/ios": "^8.0.0",
