--- a/.github/workflows/security-agent.yml
+++ b/.github/workflows/security-agent.yml
@@ -1,9 +1,11 @@
 name: Daily Security Scan
 
 on:
-  schedule:
-    - cron: '0 6 * * *'  # Every day at 6 AM
-  workflow_dispatch:
+  issues:
+    types: [labeled]
+  # schedule:
+    #- cron: '0 6 * * *'  # Every day at 6 AM
+  #workflow_dispatch:
 
 jobs:
   scan:
