--- a/.github/workflows/performance-improver.yml
+++ b/.github/workflows/performance-improver.yml
@@ -1,9 +1,11 @@
 name: Performance Improver Agent
 
 on:
-  schedule:
-    - cron: '0 4 * * *'  # Every day at 4 AM UTC
-  workflow_dispatch:
+  issues:
+    types: [labeled]
+  # schedule:
+   # - cron: '0 4 * * *'  # Every day at 4 AM UTC
+  # workflow_dispatch:
 
 jobs:
   optimize:
